--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -77,6 +77,9 @@
     <string name="settings_subscriber">Абонатно ID</string>
     <string name="settings_fpermission">Филтриране по разрешения</string>
     <string name="settings_fsystem">Филтриране на системни приложения</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
     <string name="help_granted">има разрешение в Android</string>
