--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -77,6 +77,9 @@
     <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
     <string name="settings_fpermission">Φιλτράρισμα ανά άδεια</string>
     <string name="settings_fsystem">Φιλτράρισμα εφαρμογών συστήματος</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Εφαρμογή</string>
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
