--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -77,6 +77,9 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Ocultar permisos no utilizados</string>
     <string name="settings_fsystem">Ocultar aplicaciones del sistema</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Aplicación</string>
     <string name="help_internet">Tiene permisos para Internet</string>
     <string name="help_granted">Tiene permisos por Android</string>
