--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -78,6 +78,9 @@
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
     <string name="settings_fsystem">Filtruj aplikacje systemowe</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">wymaga dostępu do internetu</string>
     <string name="help_granted">wymaga dostępu do tych uprawnień Androida</string>
