--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -77,6 +77,9 @@
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Фильтровать по разрешениям</string>
     <string name="settings_fsystem">Скрывать системные приложения</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
