--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -76,6 +76,9 @@
     <string name="settings_subscriber">Sim Numarası (IMSI)</string>
     <string name="settings_fpermission">İzne göre filtre et</string>
     <string name="settings_fsystem">Sistem uygulamalarını gösterme</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Uygulama</string>
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
