--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -76,6 +76,9 @@
     <string name="settings_subscriber">ID người đăng kí</string>
     <string name="settings_fpermission">Lọc theo quyền</string>
     <string name="settings_fsystem">Lọc theo ứng dụng hệ thống</string>
+    <string name="filter_used">Filter on data usage</string>
+    <string name="filter_internet">Filter on internet access</string>
+    <string name="filter_restricted">Filter on restricted</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có các quyền của hệ điều hành</string>
