--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -62,14 +62,17 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_category">Kategori:</string>
     <string name="title_restrict">Afkryds for at begrænse:</string>
     <string name="title_nofilter">No active filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
+
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Højdegrad</string>
     <string name="settings_lon">Længdegrad</string>
     <string name="settings_mac">MAC adresse</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefon Nummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
