--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,6 +78,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">MAC address</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_imei" translatable="false">IMEI</string>
     <string name="settings_phone">Phone number</string>
     <string name="settings_id">Android ID</string>
