--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -62,18 +62,21 @@
     <string name="title_category">الفئة:</string>
     <string name="title_restrict">إختر للتقيد:</string>
     <string name="title_nofilter">لايوجد فلتر مُنشّط</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 فلتر نشط</item>
         <item quantity="other">%d فلاتر نشِطة</item>
     </plurals>
+
     <string name="settings_serial">السيريال#</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
     <string name="settings_mac">عنوان الماك</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">رقم الهاتف</string>
     <string name="settings_id">هوية اندرويد</string>
     <string name="settings_country">الدولة</string>
-	<string name="settings_operator">المُشغل</string> 
+    <string name="settings_operator">المُشغل</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">تصفية بواسطة الأُذونات</string>
     <string name="settings_fsystem">فلترة برامج النظام</string>
