--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -60,14 +60,17 @@
     <string name="title_category">Categoria:</string>
     <string name="title_restrict">Activa per a restringir:</string>
     <string name="title_nofilter">Cap filtre actiu</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 filtre actiu</item>
         <item quantity="other">%d filtres actius</item>
     </plurals>
+
     <string name="settings_serial">Número de sèrie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">Adreça MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Número de telèfon</string>
     <string name="settings_id">ID d\'Android</string>
     <string name="settings_country">País</string>
