--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -62,15 +62,18 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="title_category">Kategorie:</string>
     <string name="title_restrict">Zaškrtněte pro omezení:</string>
     <string name="title_nofilter">Žádný aktivní filtr</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktivní filtr</item>
         <item quantity="few">%d aktivní filtry</item>
         <item quantity="other">%d aktivních filtrů</item>
     </plurals>
+
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
     <string name="settings_mac">MAC adresa</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefonní číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Země</string>
