--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -62,14 +62,17 @@
     <string name="title_category">Kategorie:</string>
     <string name="title_restrict">Markieren zum Einschränken:</string>
     <string name="title_nofilter">Kein aktiver Filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 Filter aktiv</item>
         <item quantity="other">%d Filter aktiv</item>
     </plurals>
+
     <string name="settings_serial">Serien-Nr.</string>
     <string name="settings_lat">Breitengrad</string>
     <string name="settings_lon">Längengrad</string>
     <string name="settings_mac">MAC-Adresse</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefonnummer</string>
     <string name="settings_id">Android-ID</string>
     <string name="settings_country">Land</string>
