--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -62,14 +62,17 @@
     <string name="title_category">Κατηγορία:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="title_nofilter">No active filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
+
     <string name="settings_serial">Σειριακός αριθμός</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
     <string name="settings_mac">Διεύθυνση MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Αριθμός τηλεφώνου</string>
     <string name="settings_id">Αναγνωριστικό android</string>
     <string name="settings_country">Χώρα</string>
