--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -62,14 +62,17 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_category">Catégorie:</string>
     <string name="title_restrict">Cocher pour restreindre:</string>
     <string name="title_nofilter">Pas de filtre actif</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 filtre actif</item>
         <item quantity="other">%d filtres actifs</item>
     </plurals>
+
     <string name="settings_serial">Numéro de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">Adresse MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Numéro de téléphone</string>
     <string name="settings_id">ID Android</string>
     <string name="settings_country">Pays</string>
