--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -62,14 +62,17 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_category">קטגוריה:</string>
     <string name="title_restrict">בחר להגביל:</string>
     <string name="title_nofilter">No active filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
+
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">קו אורך</string>
     <string name="settings_lon">קו רוחב</string>
     <string name="settings_mac">כתובת MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">מספר טלפון</string>
     <string name="settings_id">אנדרואיד ID</string>
     <string name="settings_country">מדינה</string>
