--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -62,14 +62,17 @@
     <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
     <string name="title_nofilter">有効なフィルタなし</string>
+
     <plurals name="title_filters">
         <item quantity="one">1個の有効なフィルタ</item>
         <item quantity="other">%d個の有効なフィルタ</item>
     </plurals>
+
     <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
     <string name="settings_mac">MAC アドレス</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">電話番号</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">国</string>
