--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -62,14 +62,17 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Žiūrėti leidimus:</string>
     <string name="title_nofilter">Nėra aktyvių filtrų</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktyvus filtras</item>
         <item quantity="other">%d aktyvūs filtrai</item>
     </plurals>
+
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
     <string name="settings_mac">MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefono numeris</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Šalis</string>
