--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -72,6 +72,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
     <string name="settings_mac">MAC adres</string>
+    <string name="settings_ip">IP adres</string>
     <string name="settings_phone">Telefoonnummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
