--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -70,6 +70,7 @@
     <string name="settings_lat">Breddegrad</string>
     <string name="settings_lon">Lengdegrad</string>
     <string name="settings_mac">MAC adresse</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefonnummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
