--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -62,15 +62,18 @@
     <string name="title_category">Kategoria:</string>
     <string name="title_restrict">Zaznacz aby zablokować:</string>
     <string name="title_nofilter">Brak aktywnego filtra</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktywny filtr</item>
         <item quantity="few">%d aktywne filtry</item>
         <item quantity="other">%d aktywnych filtrów</item>
     </plurals>
+
     <string name="settings_serial">Numer seryjny</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
     <string name="settings_mac">Adres MAC</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Numer telefonu</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Kraj</string>
