--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -62,14 +62,17 @@
     <string name="title_category">Категория:</string>
     <string name="title_restrict">Отметьте приложения:</string>
     <string name="title_nofilter">No active filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
         <item quantity="other">%d active filters</item>
     </plurals>
+
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Страна</string>
