--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -62,15 +62,18 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="title_category">Kategória:</string>
     <string name="title_restrict">Zaškrtnite pre obmedzenie:</string>
     <string name="title_nofilter">Žiadny aktívny filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktívny filter</item>
         <item quantity="few">%d aktívne filtre</item>
         <item quantity="other">%d aktívnych filtrov</item>
     </plurals>
+
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zemepisná šírka</string>
     <string name="settings_lon">Zemepisná dĺžka</string>
     <string name="settings_mac">MAC adresa</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefónne číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Krajina</string>
