--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -62,16 +62,19 @@
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
     <string name="title_nofilter">Ni aktivnih filtrov</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktiven filter</item>
         <item quantity="two">%d aktivna filtra</item>
         <item quantity="few">%d aktivni filtri</item>
         <item quantity="other">%d aktivnih filtrov</item>
     </plurals>
+
     <string name="settings_serial">Serijska št.</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
     <string name="settings_mac">MAC naslov</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Država</string>
