--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -62,14 +62,17 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="title_category">Kategori:</string>
     <string name="title_restrict">Markera för att blockera:</string>
     <string name="title_nofilter">Inga aktiva filter</string>
+
     <plurals name="title_filters">
         <item quantity="one">1 aktivt filter</item>
         <item quantity="other">%d aktiva filter</item>
     </plurals>
+
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">MAC-adress</string>
+    <string name="settings_ip">IP address</string>
     <string name="settings_phone">Telefonnummer</string>
     <string name="settings_id">Android-ID</string>
     <string name="settings_country">Land</string>
