--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -68,12 +68,12 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
         <item quantity="other">%d filtres actifs</item>
     </plurals>
 
-    <string name="settings_serial">Numéro de série</string>
+    <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">Adresse MAC</string>
-    <string name="settings_ip">IP address</string>
-    <string name="settings_phone">Numéro de téléphone</string>
+    <string name="settings_ip">Adresse IP</string>
+    <string name="settings_phone">N° de téléphone</string>
     <string name="settings_id">ID Android</string>
     <string name="settings_country">Pays</string>
     <string name="settings_operator">Opérateur</string>
