--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -80,6 +80,7 @@
     <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
     <string name="settings_fpermission">Φιλτράρισμα ανά άδεια</string>
     <string name="settings_fsystem">Φιλτράρισμα εφαρμογών συστήματος</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
