--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -80,6 +80,7 @@
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtra per permessi</string>
     <string name="settings_fsystem">Filtra applicazioni di sistema</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
