--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -80,6 +80,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_fpermission">Tik naudojami leidimai</string>
     <string name="settings_fsystem">Nerodyti sistemos programų</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
