--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -80,6 +80,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_subscriber">Abonnee ID</string>
     <string name="settings_fpermission">Filter op rechten</string>
     <string name="settings_fsystem">Filter systeem applicaties</string>
+    <string name="settings_log">Debug log (herstart vereist)</string>
     <string name="filter_used">Filter op gegevensgebruik</string>
     <string name="filter_internet">Filter op internet toegang</string>
     <string name="filter_restricted">Filter op beperkingen</string>
