--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -78,6 +78,7 @@
     <string name="settings_subscriber">Abonnent ID</string>
     <string name="settings_fpermission">Velg etter tillatelse</string>
     <string name="settings_fsystem">Filtrer system applikasjoner</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
