--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -81,6 +81,7 @@
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
     <string name="settings_fsystem">Filtruj aplikacje systemowe</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
