--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -80,6 +80,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="settings_subscriber">Abonnent-ID</string>
     <string name="settings_fpermission">Filtrera efter behörighet</string>
     <string name="settings_fsystem">Filtrera systemappar</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
