--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -79,6 +79,7 @@
     <string name="settings_subscriber">Sim Numarası (IMSI)</string>
     <string name="settings_fpermission">İzne göre filtre et</string>
     <string name="settings_fsystem">Sistem uygulamalarını gösterme</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
