--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -80,6 +80,7 @@
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">隐藏无关权限</string>
     <string name="settings_fsystem">隐藏系统应用</string>
+    <string name="settings_log">Debug log (requires restart)</string>
     <string name="filter_used">Filter on data usage</string>
     <string name="filter_internet">Filter on internet access</string>
     <string name="filter_restricted">Filter on restricted</string>
