Updated & improved strings translation

--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -70,19 +70,19 @@
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Vĩ độ</string>
     <string name="settings_lon">Kinh độ</string>
-    <string name="settings_mac">địa chỉ MAC</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_mac">Địa chỉ MAC</string>
+    <string name="settings_ip">Địa chỉ IP</string>
     <string name="settings_phone">Số điện thoại</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Nước</string>
     <string name="settings_operator">Nhà mạng</string>
     <string name="settings_subscriber">ID người đăng kí</string>
     <string name="settings_fpermission">Lọc theo quyền</string>
-    <string name="settings_fsystem">Lọc theo ứng dụng hệ thống</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
+    <string name="settings_fsystem">Lọc ứng dụng hệ thống</string>
+    <string name="settings_log">Lưu thông tin gỡ rối (yêu cầu khởi động lại)</string>
+    <string name="filter_used">Lọc ứng dụng truy cập thông tin</string>
+    <string name="filter_internet">Lọc ứng dụng truy cập internet</string>
+    <string name="filter_restricted">Lọc ứng dụng đã hạn chế các quyền</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có các quyền của hệ điều hành</string>
