--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -80,7 +80,7 @@
     <string name="settings_fpermission">Lọc theo quyền</string>
     <string name="settings_fsystem">Lọc ứng dụng hệ thống</string>
     <string name="settings_log">Lưu thông tin gỡ rối (yêu cầu khởi động lại)</string>
-    <string name="filter_used">Lọc ứng dụng truy cập thông tin</string>
+    <string name="filter_used">Lọc ứng dụng truy cập dữ liệu</string>
     <string name="filter_internet">Lọc ứng dụng truy cập internet</string>
     <string name="filter_restricted">Lọc ứng dụng đã hạn chế các quyền</string>
     <string name="help_application">Ứng dụng</string>
