Updated Simplified Chinese translation

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -19,7 +19,7 @@
     <string name="menu_theme">切换主题</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">帮助</string>
     <string name="menu_all">全部</string>
     <string name="menu_clear">清除</string>
     <string name="menu_app_launch">启动</string>
@@ -72,18 +72,18 @@
     <string name="settings_lat">纬度</string>
     <string name="settings_lon">经度</string>
     <string name="settings_mac">MAC 地址</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">IP 地址</string>
     <string name="settings_phone">手机号码</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">国家</string>
     <string name="settings_operator">运营商</string>
     <string name="settings_subscriber">IMSI</string>
-    <string name="settings_fpermission">隐藏无关权限</string>
-    <string name="settings_fsystem">隐藏系统应用</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
+    <string name="settings_fpermission">无关权限过滤</string>
+    <string name="settings_fsystem">系统应用过滤</string>
+    <string name="settings_log">调试日志 (需要重启)</string>
+    <string name="filter_used">未用数据过滤</string>
+    <string name="filter_internet">无联网权过滤</string>
+    <string name="filter_restricted">未勾限制过滤</string>
     <string name="help_application">应用</string>
     <string name="help_internet">表示联网的权限</string>
     <string name="help_granted">表示授予的权限</string>
