Update Polish translation
Perhaps it will need some tweaking - I'll decide when I'll see the translation it in the app itself.

--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -73,21 +73,21 @@
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
     <string name="settings_mac">Adres MAC</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">Adres IP</string>
     <string name="settings_phone">Numer telefonu</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Kraj</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
-    <string name="settings_fapplication">Filter by application type</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
+    <string name="settings_fapplication">Filtruj według typu aplikacji</string>
+    <string name="settings_log">Debug log (wymaga restartu)</string>
+    <string name="filter_used">Filtruj według wymaganych uprawnień</string>
+    <string name="filter_internet">Filtruj według dostepu do internetu</string>
+    <string name="filter_restricted">Filtruj według restrykcji</string>
+    <string name="filter_app_sys">Aplikacja systemowa</string>
+    <string name="filter_app_user">Aplikacja użytkownika</string>
+    <string name="filter_app_both">Wszystkie aplikacje</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">wymaga dostępu do internetu</string>
     <string name="help_granted">wymaga dostępu do tych uprawnień Androida</string>
